Применить запросы для получения авторов и жанров с учетом фильтров, добавить сохранение даты при регистрации пользователя, заменить Timestamp на LocalDateTime, добавить метод для получения обложки книги, выполнить логическое удаление книги с использованием дополнительного поля, генерировать название обложки при сохранении, привязанное к идентификатору книги, добавить метод получения текущего зарегистрированного пользователя, добавить интеграционные тесты для метода сохранения сервиса регистрации и для метода сохранения книги в базе данных, добавить методы сохранения, удаления по идентификатору и очистки книг в корзине